[package]
name = "rusty_crypto"
version = "0.1.17"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A simple cryptographic suite for Rust"
homepage = "https://github.com/SylvanM/rusty_crypto"
repository = "https://github.com/SylvanM/rusty_crypto"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra_kit = "0.1.10"
matrix_kit = "0.1.9"
rand = "0.8"

